[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/inBetweenScene/PowerUpButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/inBetweenScene/PowerUpBox.gd" type="Script" id=2]

[node name="PowerUpBox" type="Node2D"]
script = ExtResource( 2 )

[node name="HBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1160.0
margin_bottom = 177.0
custom_constants/separation = 49
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerUpButton" parent="HBoxContainer" instance=ExtResource( 1 )]

[node name="PowerUpButton2" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_top = 113.0
margin_bottom = 177.0

[connection signal="pressed" from="HBoxContainer/PowerUpButton" to="." method="_on_PowerUpButton_pressed"]
[connection signal="pressed" from="HBoxContainer/PowerUpButton2" to="." method="_on_PowerUpButton2_pressed"]
